@@ -156,15 +156,16 @@ HBASE SHELL COMMANDS:
            hbase> get 't1', 'r1'
            hbase> get 't1', 'r1', {COLUMN => 'c1'}
            hbase> get 't1', 'r1', {COLUMN => ['c1', 'c2', 'c3']}
-           hbase> get 't1', 'r1', {TIMESTAMP => ts1, VERSIONS => 4}
+           hbase> get 't1', 'r1', {COLUMN => 'c1', TIMESTAMP => ts1}
+           hbase> get 't1', 'r1', {COLUMN => 'c1', TIMESTAMP => ts1, VERSIONS = 4}
 
  list      List all tables in hbase
 
- put       Put a cell value at specified table/row/column and optionally
+ put       Put a cell 'value' at specified table/row/column and optionally
            timestamp coordinates.  To put a cell value into table 't1' at
            row 'r1' under column 'c1' marked with the time 'ts1', do:
 
-           hbase> put 't1', 'r1', 'c1', ts1
+           hbase> put 't1', 'r1', 'c1', 'value', ts1
 
  scan      Scan a table; pass table name and optionally an array of column
            names OR an array of column names AND a dictionary of scanner 
