@@ -298,6 +298,9 @@ Trunk (unreleased changes)
    HBASE-730   On startup, rinse STARTCODE and SERVER from .META.
                (Jean-Daniel Cryans via Stack)
    HBASE-738   overview.html in need of updating (Izaak Rubin via Stack)
+   HBASE-720   clean up inconsistencies around deletes (Izaak Rubin via Stack)
+   HBASE-754   The JRuby shell documentation is wrong in "get" and "put"
+               (Jean-Daniel Cryans via Stack)
 
   NEW FEATURES
    HBASE-47    Option to set TTL for columns in hbase
